# TTP_v2

./: .gitignore  404.html  LICENSE  README.md  docker-compose.yaml  index.html  mkdocs.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: index.html  router.py
backend/api/routes/: jobs.py
backend/app/: deps.py
backend/app/registry/: index.html  modules.py
backend/app/services/: index.html  job_service.py
backend/app/utils/: __init__.py  errors.py  exceptions.py  index.html  jsonable.py  logging.py
backend/main/: index.html
backend/modules/CoT/: main.py  parsing.py  prompt.py
backend/modules/cot/: __init__.py  index.html  main.py  parsing.py  prompt.py
backend/modules/export/: main.py
backend/modules/logging/: __init__.py  main.py
backend/modules/pipeline/: __init__.py  _output.py  _prompt.py  _weather.py  main.py
backend/modules/pipeline/overview/: index.html
backend/modules/pipeline/schemes/: _generationPrompt.py  _output.py  _repairPrompt.py
backend/modules/pipeline/stages/: index.html
backend/modules/pipeline/stages/generate/: _output.py  main.py
backend/modules/pipeline/stages/repair/: main.py
backend/modules/pipeline/stages/validate/: main.py
backend/modules/refine/: main.py  tools.py
backend/modules/refine/schemes/: _generationPrompt.py  _tools.py
backend/modules/rendering/: graphs.py  main.py
backend/overview/: index.html
config/: backend.env.example  frontend.env.example
docs/: getting-started.md  index.md  repo-structure.md
docs/backend/: api.md  (+2 more)
frontend/: Dockerfile  package-lock.json  package.json
(+39 files in other folders)
