[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon",email = "shartmann@uni-muenster.de"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
